parser/myparser.output
State 157 conflicts: 1 shift/reduce


Grammar

    0 $accept: Procedure $end

    1 Procedure: PROCEDURE NAME '{' Decls Stmts '}'
    2          | PROCEDURE NAME '{' Decls Stmts
    3          | PROCEDURE NAME '{' Decls Stmts '}' '}'

    4 Decls: Decls Decl ';'
    5      | Decl ';'
    6      | Decls Decl
    7      | Decl
    8      | Decls Decl ';' ';'
    9      | Decl ';' ';'

   10 Decl: Type SpecList

   11 Type: INT
   12     | CHAR

   13 SpecList: SpecList ',' Spec
   14         | Spec

   15 Spec: NAME
   16     | NAME '[' Bounds ']'

   17 Bounds: Bounds ',' Bound
   18       | Bound

   19 Bound: NUMBER ':' NUMBER

   20 Stmts: Stmts Stmt
   21      | Stmt

   22 Stmt: Reference '=' Expr ';'
   23     | '{' Stmts '}'
   24     | IFHead THEN Stmt

   25 @1: /* empty */

   26 Stmt: IFHead THEN WithElse @1 ELSE Stmt
   27     | WHILE '(' Bool ')' '{' Stmts '}'
   28     | FOR NAME '=' Expr TO Expr BY Expr '{' Stmts '}'
   29     | READ Reference ';'
   30     | WRITE Expr ';'
   31     | '{' '}'
   32     | '{' ';' '}'
   33     | Reference '+' '=' Expr ';'
   34     | Reference '=' Expr ';' ';'
   35     | WRITE '=' Expr ';'
   36     | NAME NAME ';'
   37     | Reference '=' Expr error
   38     | error ';'

   39 IFHead: IF '(' Bool ')'

   40 WithElse: IFHead THEN WithElse ELSE WithElse
   41         | Reference '=' Expr ';'
   42         | '{' Stmts '}'
   43         | WHILE '(' Bool ')' '{' Stmts '}'
   44         | FOR NAME '=' Expr TO Expr BY Expr '{' Stmts '}'
   45         | READ Reference ';'
   46         | WRITE Expr ';'
   47         | '{' '}'
   48         | '{' ';' '}'
   49         | Reference '+' '=' Expr ';'
   50         | Reference '=' Expr ';' ';'
   51         | WRITE '=' Expr ';'
   52         | NAME NAME ';'
   53         | Reference '=' Expr error
   54         | error ';'

   55 Bool: NOT OrTerm
   56     | OrTerm

   57 OrTerm: OrTerm OR AndTerm
   58       | AndTerm

   59 AndTerm: AndTerm AND RelExpr
   60        | RelExpr

   61 RelExpr: RelExpr LT Expr
   62        | RelExpr LE Expr
   63        | RelExpr EQ Expr
   64        | RelExpr NE Expr
   65        | RelExpr GE Expr
   66        | RelExpr GT Expr
   67        | Expr
   68        | RelExpr '=' Expr

   69 Expr: Expr '+' Term
   70     | Expr '-' Term
   71     | Term

   72 Term: Term '*' Factor
   73     | Term '/' Factor
   74     | Factor

   75 Factor: '(' Expr ')'
   76       | Reference
   77       | NUMBER
   78       | CHARCONST

   79 Reference: NAME
   80          | NAME '[' Exprs ']'

   81 Exprs: Expr ',' Exprs
   82      | Expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 27 39 43 75
')' (41) 27 39 43 75
'*' (42) 72
'+' (43) 33 49 69
',' (44) 13 17 81
'-' (45) 70
'/' (47) 73
':' (58) 19
';' (59) 4 5 8 9 22 29 30 32 33 34 35 36 38 41 45 46 48 49 50 51 52
    54
'=' (61) 22 28 33 34 35 37 41 44 49 50 51 53 68
'[' (91) 16 80
']' (93) 16 80
'{' (123) 1 2 3 23 27 28 31 32 42 43 44 47 48
'}' (125) 1 3 23 27 28 31 32 42 43 44 47 48
error (256) 37 38 53 54
PROCEDURE (258) 1 2 3
INT (259) 11
CHAR (260) 12
WRITE (261) 30 35 46 51
READ (262) 29 45
AND (263) 59
OR (264) 57
NOT (265) 55
IF (266) 39
ELSE (267) 26 40
THEN (268) 24 26 40
FOR (269) 28 44
TO (270) 28 44
BY (271) 28 44
WHILE (272) 27 43
LT (273) 61
LE (274) 62
EQ (275) 63
NE (276) 64
GT (277) 66
GE (278) 65
NAME (279) 1 2 3 15 16 28 36 44 52 79 80
NUMBER (280) 19 77
CHARCONST (281) 78


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
Procedure (42)
    on left: 1 2 3, on right: 0
Decls (43)
    on left: 4 5 6 7 8 9, on right: 1 2 3 4 6 8
Decl (44)
    on left: 10, on right: 4 5 6 7 8 9
Type (45)
    on left: 11 12, on right: 10
SpecList (46)
    on left: 13 14, on right: 10 13
Spec (47)
    on left: 15 16, on right: 13 14
Bounds (48)
    on left: 17 18, on right: 16 17
Bound (49)
    on left: 19, on right: 17 18
Stmts (50)
    on left: 20 21, on right: 1 2 3 20 23 27 28 42 43 44
Stmt (51)
    on left: 22 23 24 26 27 28 29 30 31 32 33 34 35 36 37 38,
    on right: 20 21 24 26
@1 (52)
    on left: 25, on right: 26
IFHead (53)
    on left: 39, on right: 24 26 40
WithElse (54)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54,
    on right: 26 40
Bool (55)
    on left: 55 56, on right: 27 39 43
OrTerm (56)
    on left: 57 58, on right: 55 56 57
AndTerm (57)
    on left: 59 60, on right: 57 58 59
RelExpr (58)
    on left: 61 62 63 64 65 66 67 68, on right: 59 60 61 62 63 64 65
    66 68
Expr (59)
    on left: 69 70 71, on right: 22 28 30 33 34 35 37 41 44 46 49 50
    51 53 61 62 63 64 65 66 67 68 69 70 75 81 82
Term (60)
    on left: 72 73 74, on right: 69 70 71 72 73
Factor (61)
    on left: 75 76 77 78, on right: 72 73 74
Reference (62)
    on left: 79 80, on right: 22 29 33 34 37 41 45 49 50 53 76
Exprs (63)
    on left: 81 82, on right: 80 81


state 0

    0 $accept: . Procedure $end

    PROCEDURE  shift, and go to state 1

    Procedure  go to state 2


state 1

    1 Procedure: PROCEDURE . NAME '{' Decls Stmts '}'
    2          | PROCEDURE . NAME '{' Decls Stmts
    3          | PROCEDURE . NAME '{' Decls Stmts '}' '}'

    NAME  shift, and go to state 3


state 2

    0 $accept: Procedure . $end

    $end  shift, and go to state 4


state 3

    1 Procedure: PROCEDURE NAME . '{' Decls Stmts '}'
    2          | PROCEDURE NAME . '{' Decls Stmts
    3          | PROCEDURE NAME . '{' Decls Stmts '}' '}'

    '{'  shift, and go to state 5


state 4

    0 $accept: Procedure $end .

    $default  accept


state 5

    1 Procedure: PROCEDURE NAME '{' . Decls Stmts '}'
    2          | PROCEDURE NAME '{' . Decls Stmts
    3          | PROCEDURE NAME '{' . Decls Stmts '}' '}'

    INT   shift, and go to state 6
    CHAR  shift, and go to state 7

    Decls  go to state 8
    Decl   go to state 9
    Type   go to state 10


state 6

   11 Type: INT .

    $default  reduce using rule 11 (Type)


state 7

   12 Type: CHAR .

    $default  reduce using rule 12 (Type)


state 8

    1 Procedure: PROCEDURE NAME '{' Decls . Stmts '}'
    2          | PROCEDURE NAME '{' Decls . Stmts
    3          | PROCEDURE NAME '{' Decls . Stmts '}' '}'
    4 Decls: Decls . Decl ';'
    6      | Decls . Decl
    8      | Decls . Decl ';' ';'

    error  shift, and go to state 11
    INT    shift, and go to state 6
    CHAR   shift, and go to state 7
    WRITE  shift, and go to state 12
    READ   shift, and go to state 13
    IF     shift, and go to state 14
    FOR    shift, and go to state 15
    WHILE  shift, and go to state 16
    NAME   shift, and go to state 17
    '{'    shift, and go to state 18

    Decl       go to state 19
    Type       go to state 10
    Stmts      go to state 20
    Stmt       go to state 21
    IFHead     go to state 22
    Reference  go to state 23


state 9

    5 Decls: Decl . ';'
    7      | Decl .
    9      | Decl . ';' ';'

    ';'  shift, and go to state 24

    $default  reduce using rule 7 (Decls)


state 10

   10 Decl: Type . SpecList

    NAME  shift, and go to state 25

    SpecList  go to state 26
    Spec      go to state 27


state 11

   38 Stmt: error . ';'

    ';'  shift, and go to state 28


state 12

   30 Stmt: WRITE . Expr ';'
   35     | WRITE . '=' Expr ';'

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '='        shift, and go to state 32
    '('        shift, and go to state 33

    Expr       go to state 34
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 13

   29 Stmt: READ . Reference ';'

    NAME  shift, and go to state 29

    Reference  go to state 38


state 14

   39 IFHead: IF . '(' Bool ')'

    '('  shift, and go to state 39


state 15

   28 Stmt: FOR . NAME '=' Expr TO Expr BY Expr '{' Stmts '}'

    NAME  shift, and go to state 40


state 16

   27 Stmt: WHILE . '(' Bool ')' '{' Stmts '}'

    '('  shift, and go to state 41


state 17

   36 Stmt: NAME . NAME ';'
   79 Reference: NAME .
   80          | NAME . '[' Exprs ']'

    NAME  shift, and go to state 42
    '['   shift, and go to state 43

    $default  reduce using rule 79 (Reference)


state 18

   23 Stmt: '{' . Stmts '}'
   31     | '{' . '}'
   32     | '{' . ';' '}'

    error  shift, and go to state 11
    WRITE  shift, and go to state 12
    READ   shift, and go to state 13
    IF     shift, and go to state 14
    FOR    shift, and go to state 15
    WHILE  shift, and go to state 16
    NAME   shift, and go to state 17
    '{'    shift, and go to state 18
    '}'    shift, and go to state 44
    ';'    shift, and go to state 45

    Stmts      go to state 46
    Stmt       go to state 21
    IFHead     go to state 22
    Reference  go to state 23


state 19

    4 Decls: Decls Decl . ';'
    6      | Decls Decl .
    8      | Decls Decl . ';' ';'

    ';'  shift, and go to state 47

    $default  reduce using rule 6 (Decls)


state 20

    1 Procedure: PROCEDURE NAME '{' Decls Stmts . '}'
    2          | PROCEDURE NAME '{' Decls Stmts .
    3          | PROCEDURE NAME '{' Decls Stmts . '}' '}'
   20 Stmts: Stmts . Stmt

    error  shift, and go to state 11
    WRITE  shift, and go to state 12
    READ   shift, and go to state 13
    IF     shift, and go to state 14
    FOR    shift, and go to state 15
    WHILE  shift, and go to state 16
    NAME   shift, and go to state 17
    '{'    shift, and go to state 18
    '}'    shift, and go to state 48

    $end  reduce using rule 2 (Procedure)

    Stmt       go to state 49
    IFHead     go to state 22
    Reference  go to state 23


state 21

   21 Stmts: Stmt .

    $default  reduce using rule 21 (Stmts)


state 22

   24 Stmt: IFHead . THEN Stmt
   26     | IFHead . THEN WithElse @1 ELSE Stmt

    THEN  shift, and go to state 50


state 23

   22 Stmt: Reference . '=' Expr ';'
   33     | Reference . '+' '=' Expr ';'
   34     | Reference . '=' Expr ';' ';'
   37     | Reference . '=' Expr error

    '='  shift, and go to state 51
    '+'  shift, and go to state 52


state 24

    5 Decls: Decl ';' .
    9      | Decl ';' . ';'

    ';'  shift, and go to state 53

    $default  reduce using rule 5 (Decls)


state 25

   15 Spec: NAME .
   16     | NAME . '[' Bounds ']'

    '['  shift, and go to state 54

    $default  reduce using rule 15 (Spec)


state 26

   10 Decl: Type SpecList .
   13 SpecList: SpecList . ',' Spec

    ','  shift, and go to state 55

    $default  reduce using rule 10 (Decl)


state 27

   14 SpecList: Spec .

    $default  reduce using rule 14 (SpecList)


state 28

   38 Stmt: error ';' .

    $default  reduce using rule 38 (Stmt)


state 29

   79 Reference: NAME .
   80          | NAME . '[' Exprs ']'

    '['  shift, and go to state 43

    $default  reduce using rule 79 (Reference)


state 30

   77 Factor: NUMBER .

    $default  reduce using rule 77 (Factor)


state 31

   78 Factor: CHARCONST .

    $default  reduce using rule 78 (Factor)


state 32

   35 Stmt: WRITE '=' . Expr ';'

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Expr       go to state 56
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 33

   75 Factor: '(' . Expr ')'

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Expr       go to state 57
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 34

   30 Stmt: WRITE Expr . ';'
   69 Expr: Expr . '+' Term
   70     | Expr . '-' Term

    ';'  shift, and go to state 58
    '+'  shift, and go to state 59
    '-'  shift, and go to state 60


state 35

   71 Expr: Term .
   72 Term: Term . '*' Factor
   73     | Term . '/' Factor

    '*'  shift, and go to state 61
    '/'  shift, and go to state 62

    $default  reduce using rule 71 (Expr)


state 36

   74 Term: Factor .

    $default  reduce using rule 74 (Term)


state 37

   76 Factor: Reference .

    $default  reduce using rule 76 (Factor)


state 38

   29 Stmt: READ Reference . ';'

    ';'  shift, and go to state 63


state 39

   39 IFHead: IF '(' . Bool ')'

    NOT        shift, and go to state 64
    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Bool       go to state 65
    OrTerm     go to state 66
    AndTerm    go to state 67
    RelExpr    go to state 68
    Expr       go to state 69
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 40

   28 Stmt: FOR NAME . '=' Expr TO Expr BY Expr '{' Stmts '}'

    '='  shift, and go to state 70


state 41

   27 Stmt: WHILE '(' . Bool ')' '{' Stmts '}'

    NOT        shift, and go to state 64
    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Bool       go to state 71
    OrTerm     go to state 66
    AndTerm    go to state 67
    RelExpr    go to state 68
    Expr       go to state 69
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 42

   36 Stmt: NAME NAME . ';'

    ';'  shift, and go to state 72


state 43

   80 Reference: NAME '[' . Exprs ']'

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Expr       go to state 73
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37
    Exprs      go to state 74


state 44

   31 Stmt: '{' '}' .

    $default  reduce using rule 31 (Stmt)


state 45

   32 Stmt: '{' ';' . '}'

    '}'  shift, and go to state 75


state 46

   20 Stmts: Stmts . Stmt
   23 Stmt: '{' Stmts . '}'

    error  shift, and go to state 11
    WRITE  shift, and go to state 12
    READ   shift, and go to state 13
    IF     shift, and go to state 14
    FOR    shift, and go to state 15
    WHILE  shift, and go to state 16
    NAME   shift, and go to state 17
    '{'    shift, and go to state 18
    '}'    shift, and go to state 76

    Stmt       go to state 49
    IFHead     go to state 22
    Reference  go to state 23


state 47

    4 Decls: Decls Decl ';' .
    8      | Decls Decl ';' . ';'

    ';'  shift, and go to state 77

    $default  reduce using rule 4 (Decls)


state 48

    1 Procedure: PROCEDURE NAME '{' Decls Stmts '}' .
    3          | PROCEDURE NAME '{' Decls Stmts '}' . '}'

    '}'  shift, and go to state 78

    $default  reduce using rule 1 (Procedure)


state 49

   20 Stmts: Stmts Stmt .

    $default  reduce using rule 20 (Stmts)


state 50

   24 Stmt: IFHead THEN . Stmt
   26     | IFHead THEN . WithElse @1 ELSE Stmt

    error  shift, and go to state 79
    WRITE  shift, and go to state 80
    READ   shift, and go to state 81
    IF     shift, and go to state 14
    FOR    shift, and go to state 82
    WHILE  shift, and go to state 83
    NAME   shift, and go to state 84
    '{'    shift, and go to state 85

    Stmt       go to state 86
    IFHead     go to state 87
    WithElse   go to state 88
    Reference  go to state 89


state 51

   22 Stmt: Reference '=' . Expr ';'
   34     | Reference '=' . Expr ';' ';'
   37     | Reference '=' . Expr error

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Expr       go to state 90
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 52

   33 Stmt: Reference '+' . '=' Expr ';'

    '='  shift, and go to state 91


state 53

    9 Decls: Decl ';' ';' .

    $default  reduce using rule 9 (Decls)


state 54

   16 Spec: NAME '[' . Bounds ']'

    NUMBER  shift, and go to state 92

    Bounds  go to state 93
    Bound   go to state 94


state 55

   13 SpecList: SpecList ',' . Spec

    NAME  shift, and go to state 25

    Spec  go to state 95


state 56

   35 Stmt: WRITE '=' Expr . ';'
   69 Expr: Expr . '+' Term
   70     | Expr . '-' Term

    ';'  shift, and go to state 96
    '+'  shift, and go to state 59
    '-'  shift, and go to state 60


state 57

   69 Expr: Expr . '+' Term
   70     | Expr . '-' Term
   75 Factor: '(' Expr . ')'

    ')'  shift, and go to state 97
    '+'  shift, and go to state 59
    '-'  shift, and go to state 60


state 58

   30 Stmt: WRITE Expr ';' .

    $default  reduce using rule 30 (Stmt)


state 59

   69 Expr: Expr '+' . Term

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Term       go to state 98
    Factor     go to state 36
    Reference  go to state 37


state 60

   70 Expr: Expr '-' . Term

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Term       go to state 99
    Factor     go to state 36
    Reference  go to state 37


state 61

   72 Term: Term '*' . Factor

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Factor     go to state 100
    Reference  go to state 37


state 62

   73 Term: Term '/' . Factor

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Factor     go to state 101
    Reference  go to state 37


state 63

   29 Stmt: READ Reference ';' .

    $default  reduce using rule 29 (Stmt)


state 64

   55 Bool: NOT . OrTerm

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    OrTerm     go to state 102
    AndTerm    go to state 67
    RelExpr    go to state 68
    Expr       go to state 69
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 65

   39 IFHead: IF '(' Bool . ')'

    ')'  shift, and go to state 103


state 66

   56 Bool: OrTerm .
   57 OrTerm: OrTerm . OR AndTerm

    OR  shift, and go to state 104

    $default  reduce using rule 56 (Bool)


state 67

   58 OrTerm: AndTerm .
   59 AndTerm: AndTerm . AND RelExpr

    AND  shift, and go to state 105

    $default  reduce using rule 58 (OrTerm)


state 68

   60 AndTerm: RelExpr .
   61 RelExpr: RelExpr . LT Expr
   62        | RelExpr . LE Expr
   63        | RelExpr . EQ Expr
   64        | RelExpr . NE Expr
   65        | RelExpr . GE Expr
   66        | RelExpr . GT Expr
   68        | RelExpr . '=' Expr

    LT   shift, and go to state 106
    LE   shift, and go to state 107
    EQ   shift, and go to state 108
    NE   shift, and go to state 109
    GT   shift, and go to state 110
    GE   shift, and go to state 111
    '='  shift, and go to state 112

    $default  reduce using rule 60 (AndTerm)


state 69

   67 RelExpr: Expr .
   69 Expr: Expr . '+' Term
   70     | Expr . '-' Term

    '+'  shift, and go to state 59
    '-'  shift, and go to state 60

    $default  reduce using rule 67 (RelExpr)


state 70

   28 Stmt: FOR NAME '=' . Expr TO Expr BY Expr '{' Stmts '}'

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Expr       go to state 113
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 71

   27 Stmt: WHILE '(' Bool . ')' '{' Stmts '}'

    ')'  shift, and go to state 114


state 72

   36 Stmt: NAME NAME ';' .

    $default  reduce using rule 36 (Stmt)


state 73

   69 Expr: Expr . '+' Term
   70     | Expr . '-' Term
   81 Exprs: Expr . ',' Exprs
   82      | Expr .

    ','  shift, and go to state 115
    '+'  shift, and go to state 59
    '-'  shift, and go to state 60

    $default  reduce using rule 82 (Exprs)


state 74

   80 Reference: NAME '[' Exprs . ']'

    ']'  shift, and go to state 116


state 75

   32 Stmt: '{' ';' '}' .

    $default  reduce using rule 32 (Stmt)


state 76

   23 Stmt: '{' Stmts '}' .

    $default  reduce using rule 23 (Stmt)


state 77

    8 Decls: Decls Decl ';' ';' .

    $default  reduce using rule 8 (Decls)


state 78

    3 Procedure: PROCEDURE NAME '{' Decls Stmts '}' '}' .

    $default  reduce using rule 3 (Procedure)


state 79

   38 Stmt: error . ';'
   54 WithElse: error . ';'

    ';'  shift, and go to state 117


state 80

   30 Stmt: WRITE . Expr ';'
   35     | WRITE . '=' Expr ';'
   46 WithElse: WRITE . Expr ';'
   51         | WRITE . '=' Expr ';'

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '='        shift, and go to state 118
    '('        shift, and go to state 33

    Expr       go to state 119
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 81

   29 Stmt: READ . Reference ';'
   45 WithElse: READ . Reference ';'

    NAME  shift, and go to state 29

    Reference  go to state 120


state 82

   28 Stmt: FOR . NAME '=' Expr TO Expr BY Expr '{' Stmts '}'
   44 WithElse: FOR . NAME '=' Expr TO Expr BY Expr '{' Stmts '}'

    NAME  shift, and go to state 121


state 83

   27 Stmt: WHILE . '(' Bool ')' '{' Stmts '}'
   43 WithElse: WHILE . '(' Bool ')' '{' Stmts '}'

    '('  shift, and go to state 122


state 84

   36 Stmt: NAME . NAME ';'
   52 WithElse: NAME . NAME ';'
   79 Reference: NAME .
   80          | NAME . '[' Exprs ']'

    NAME  shift, and go to state 123
    '['   shift, and go to state 43

    $default  reduce using rule 79 (Reference)


state 85

   23 Stmt: '{' . Stmts '}'
   31     | '{' . '}'
   32     | '{' . ';' '}'
   42 WithElse: '{' . Stmts '}'
   47         | '{' . '}'
   48         | '{' . ';' '}'

    error  shift, and go to state 11
    WRITE  shift, and go to state 12
    READ   shift, and go to state 13
    IF     shift, and go to state 14
    FOR    shift, and go to state 15
    WHILE  shift, and go to state 16
    NAME   shift, and go to state 17
    '{'    shift, and go to state 18
    '}'    shift, and go to state 124
    ';'    shift, and go to state 125

    Stmts      go to state 126
    Stmt       go to state 21
    IFHead     go to state 22
    Reference  go to state 23


state 86

   24 Stmt: IFHead THEN Stmt .

    $default  reduce using rule 24 (Stmt)


state 87

   24 Stmt: IFHead . THEN Stmt
   26     | IFHead . THEN WithElse @1 ELSE Stmt
   40 WithElse: IFHead . THEN WithElse ELSE WithElse

    THEN  shift, and go to state 127


state 88

   26 Stmt: IFHead THEN WithElse . @1 ELSE Stmt

    $default  reduce using rule 25 (@1)

    @1  go to state 128


state 89

   22 Stmt: Reference . '=' Expr ';'
   33     | Reference . '+' '=' Expr ';'
   34     | Reference . '=' Expr ';' ';'
   37     | Reference . '=' Expr error
   41 WithElse: Reference . '=' Expr ';'
   49         | Reference . '+' '=' Expr ';'
   50         | Reference . '=' Expr ';' ';'
   53         | Reference . '=' Expr error

    '='  shift, and go to state 129
    '+'  shift, and go to state 130


state 90

   22 Stmt: Reference '=' Expr . ';'
   34     | Reference '=' Expr . ';' ';'
   37     | Reference '=' Expr . error
   69 Expr: Expr . '+' Term
   70     | Expr . '-' Term

    error  shift, and go to state 131
    ';'    shift, and go to state 132
    '+'    shift, and go to state 59
    '-'    shift, and go to state 60


state 91

   33 Stmt: Reference '+' '=' . Expr ';'

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Expr       go to state 133
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 92

   19 Bound: NUMBER . ':' NUMBER

    ':'  shift, and go to state 134


state 93

   16 Spec: NAME '[' Bounds . ']'
   17 Bounds: Bounds . ',' Bound

    ','  shift, and go to state 135
    ']'  shift, and go to state 136


state 94

   18 Bounds: Bound .

    $default  reduce using rule 18 (Bounds)


state 95

   13 SpecList: SpecList ',' Spec .

    $default  reduce using rule 13 (SpecList)


state 96

   35 Stmt: WRITE '=' Expr ';' .

    $default  reduce using rule 35 (Stmt)


state 97

   75 Factor: '(' Expr ')' .

    $default  reduce using rule 75 (Factor)


state 98

   69 Expr: Expr '+' Term .
   72 Term: Term . '*' Factor
   73     | Term . '/' Factor

    '*'  shift, and go to state 61
    '/'  shift, and go to state 62

    $default  reduce using rule 69 (Expr)


state 99

   70 Expr: Expr '-' Term .
   72 Term: Term . '*' Factor
   73     | Term . '/' Factor

    '*'  shift, and go to state 61
    '/'  shift, and go to state 62

    $default  reduce using rule 70 (Expr)


state 100

   72 Term: Term '*' Factor .

    $default  reduce using rule 72 (Term)


state 101

   73 Term: Term '/' Factor .

    $default  reduce using rule 73 (Term)


state 102

   55 Bool: NOT OrTerm .
   57 OrTerm: OrTerm . OR AndTerm

    OR  shift, and go to state 104

    $default  reduce using rule 55 (Bool)


state 103

   39 IFHead: IF '(' Bool ')' .

    $default  reduce using rule 39 (IFHead)


state 104

   57 OrTerm: OrTerm OR . AndTerm

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    AndTerm    go to state 137
    RelExpr    go to state 68
    Expr       go to state 69
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 105

   59 AndTerm: AndTerm AND . RelExpr

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    RelExpr    go to state 138
    Expr       go to state 69
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 106

   61 RelExpr: RelExpr LT . Expr

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Expr       go to state 139
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 107

   62 RelExpr: RelExpr LE . Expr

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Expr       go to state 140
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 108

   63 RelExpr: RelExpr EQ . Expr

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Expr       go to state 141
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 109

   64 RelExpr: RelExpr NE . Expr

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Expr       go to state 142
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 110

   66 RelExpr: RelExpr GT . Expr

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Expr       go to state 143
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 111

   65 RelExpr: RelExpr GE . Expr

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Expr       go to state 144
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 112

   68 RelExpr: RelExpr '=' . Expr

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Expr       go to state 145
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 113

   28 Stmt: FOR NAME '=' Expr . TO Expr BY Expr '{' Stmts '}'
   69 Expr: Expr . '+' Term
   70     | Expr . '-' Term

    TO   shift, and go to state 146
    '+'  shift, and go to state 59
    '-'  shift, and go to state 60


state 114

   27 Stmt: WHILE '(' Bool ')' . '{' Stmts '}'

    '{'  shift, and go to state 147


state 115

   81 Exprs: Expr ',' . Exprs

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Expr       go to state 73
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37
    Exprs      go to state 148


state 116

   80 Reference: NAME '[' Exprs ']' .

    $default  reduce using rule 80 (Reference)


state 117

   38 Stmt: error ';' .
   54 WithElse: error ';' .

    ELSE      reduce using rule 54 (WithElse)
    $default  reduce using rule 38 (Stmt)


state 118

   35 Stmt: WRITE '=' . Expr ';'
   51 WithElse: WRITE '=' . Expr ';'

    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Expr       go to state 149
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 119

   30 Stmt: WRITE Expr . ';'
   46 WithElse: WRITE Expr . ';'
   69 Expr: Expr . '+' Term
   70     | Expr . '-' Term

    ';'  shift, and go to state 150
    '+'  shift, and go to state 59
    '-'  shift, and go to state 60


state 120

   29 Stmt: READ Reference . ';'
   45 WithElse: READ Reference . ';'

    ';'  shift, and go to state 151


state 121

   28 Stmt: FOR NAME . '=' Expr TO Expr BY Expr '{' Stmts '}'
   44 WithElse: FOR NAME . '=' Expr TO Expr BY Expr '{' Stmts '}'

    '='  shift, and go to state 152


state 122

   27 Stmt: WHILE '(' . Bool ')' '{' Stmts '}'
   43 WithElse: WHILE '(' . Bool ')' '{' Stmts '}'

    NOT        shift, and go to state 64
    NAME       shift, and go to state 29
    NUMBER     shift, and go to state 30
    CHARCONST  shift, and go to state 31
    '('        shift, and go to state 33

    Bool       go to state 153
    OrTerm     go to state 66
    AndTerm    go to state 67
    RelExpr    go to state 68
    Expr       go to state 69
    Term       go to state 35
    Factor     go to state 36
    Reference  go to state 37


state 123

   36 Stmt: NAME NAME . ';'
   52 WithElse: NAME NAME . ';'

    ';'  shift, and go to state 154


state 124

   31 Stmt: '{' '}' .
   47 WithElse: '{' '}' .

    ELSE      reduce using rule 47 (WithElse)
    $default  reduce using rule 31 (Stmt)


state 125

   32 Stmt: '{' ';' . '}'
   48 WithElse: '{' ';' . '}'
